<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.mz</groupId>
    <artifactId>spring-reactive-microservices</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>shortener-api</module>
        <module>shortener-impl</module>
        <module>statistic-impl</module>
        <module>common</module>
        <module>user-impl</module>
        <module>user-api</module>
        <module>common-api</module>
        <module>api-gateway</module>
        <module>common-persistence</module>
    </modules>


    <name>spring-reactive-microservices</name>
    <description>Demo project for Spring Boot</description>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>2.1.5.RELEASE</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>11</java.version>

        <!-- Use most recent failsafe and surefire plugin versions -->
<!--        <maven-failsafe-plugin.version>2.22.0</maven-failsafe-plugin.version>-->
<!--        <maven-surefire-plugin.version>2.22.0</maven-surefire-plugin.version>-->

        <spring-cloud.version>Greenwich.RELEASE</spring-cloud.version>
        <reactive-demo.version>0.0.1-SNAPSHOT</reactive-demo.version>
        <eclipse-collections.version>9.2.0</eclipse-collections.version>
        <org.immutables.version>2.7.5</org.immutables.version>
        <jackson-databind.version>2.9.8</jackson-databind.version>
        <mockito-junit-jupiter.version>2.23.0</mockito-junit-jupiter.version>
        <akka.version>2.5.21</akka.version>
        <akka-persistence-cassandra.version>0.23</akka-persistence-cassandra.version>
        <leveldbjni-all.version>1.8</leveldbjni-all.version>
        <leveldb.version>0.7</leveldb.version>
        <akka-persistence-mongo.version>2.2.4</akka-persistence-mongo.version>
        <org.mongodb.casbah.version>3.1.1</org.mongodb.casbah.version>
        <mongodb-scala.version>2.4.2</mongodb-scala.version>
        <javax.annotation-api.version>1.3.2</javax.annotation-api.version>
    </properties>

    <dependencyManagement>

        <dependencies>

            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <dependency>
                <groupId>org.eclipse.collections</groupId>
                <artifactId>eclipse-collections-api</artifactId>
                <version>${eclipse-collections.version}</version>
            </dependency>

            <dependency>
                <groupId>org.eclipse.collections</groupId>
                <artifactId>eclipse-collections</artifactId>
                <version>${eclipse-collections.version}</version>
            </dependency>

            <dependency>
                <artifactId>common</artifactId>
                <groupId>com.mz</groupId>
                <version>${reactive-demo.version}</version>
            </dependency>

            <dependency>
                <groupId>com.mz</groupId>
                <artifactId>common-persistence</artifactId>
                <version>${reactive-demo.version}</version>
            </dependency>

            <dependency>
                <artifactId>common-api</artifactId>
                <groupId>com.mz</groupId>
                <version>${reactive-demo.version}</version>
            </dependency>

            <dependency>
                <artifactId>shortener-api</artifactId>
                <groupId>com.mz</groupId>
                <version>${reactive-demo.version}</version>
            </dependency>

            <dependency>
                <groupId>com.mz</groupId>
                <artifactId>user-api</artifactId>
                <version>${reactive-demo.version}</version>
            </dependency>

            <!-- Provide immutable -->
            <dependency>
                <groupId>org.immutables</groupId>
                <artifactId>value</artifactId>
                <version>${org.immutables.version}</version>
                <scope>provided</scope>
            </dependency>

            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson-databind.version}</version>
                <scope>compile</scope>
            </dependency>

            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-junit-jupiter</artifactId>
                <version>${mockito-junit-jupiter.version}</version>
                <scope>test</scope>
            </dependency>

            <!-- Akka actor -->
            <dependency>
                <groupId>com.typesafe.akka</groupId>
                <artifactId>akka-persistence-query_2.12</artifactId>
                <version>${akka.version}</version>
            </dependency>
            <dependency>
                <groupId>com.typesafe.akka</groupId>
                <artifactId>akka-persistence_2.12</artifactId>
                <version>${akka.version}</version>
            </dependency>

            <dependency>
                <groupId>com.typesafe.akka</groupId>
                <artifactId>akka-persistence-query_2.12</artifactId>
                <version>${akka.version}</version>
            </dependency>

            <dependency>
                <groupId>com.typesafe.akka</groupId>
                <artifactId>akka-cluster_2.12</artifactId>
                <version>${akka.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.github.scullxbones/akka-persistence-mongo-common -->
            <dependency>
                <groupId>com.github.scullxbones</groupId>
                <artifactId>akka-persistence-mongo-common_2.12</artifactId>
                <version>${akka-persistence-mongo.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/com.github.scullxbones/akka-persistence-mongo-casbah -->
            <dependency>
                <groupId>com.github.scullxbones</groupId>
                <artifactId>akka-persistence-mongo-casbah_2.12</artifactId>
                <version>${akka-persistence-mongo.version}</version>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.mongodb/casbah -->
            <dependency>
                <groupId>org.mongodb</groupId>
                <artifactId>casbah_2.12</artifactId>
                <version>${org.mongodb.casbah.version}</version>
                <type>pom</type>
            </dependency>

            <!-- https://mvnrepository.com/artifact/org.mongodb.scala/mongo-scala-driver -->
            <dependency>
                <groupId>org.mongodb.scala</groupId>
                <artifactId>mongo-scala-driver_2.12</artifactId>
                <version>${mongodb-scala.version}</version>
            </dependency>
            <!-- https://mvnrepository.com/artifact/org.mongodb.scala/mongo-scala-bson -->
            <dependency>
                <groupId>org.mongodb.scala</groupId>
                <artifactId>mongo-scala-bson_2.12</artifactId>
                <version>${mongodb-scala.version}</version>
            </dependency>

            <dependency>
                <groupId>org.mockito</groupId>
                <artifactId>mockito-core</artifactId>
                <version>2.23.4</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>javax.annotation</groupId>
                <artifactId>javax.annotation-api</artifactId>
                <version>${javax.annotation-api.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>


    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.8.1</version>
                    <configuration>
                        <release>11</release>
                        <annotationProcessorPaths>
                            <dependency>
                                <groupId>org.immutables</groupId>
                                <artifactId>value</artifactId>
                                <version>${org.immutables.version}</version>
                            </dependency>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.springframework.boot</groupId>
                    <artifactId>spring-boot-maven-plugin</artifactId>
                    <executions>
                        <execution>
                            <goals>
                                <goal>repackage</goal>
                            </goals>
                            <configuration>
                                <classifier>spring-boot</classifier>
                            </configuration>
                        </execution>
                    </executions>
                </plugin>

                <!-- Spring Boot configures surefire by default, but not failsafe -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

</project>
